--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
+        "php": ">=7.1.3",
         "swiftmailer/swiftmailer": "^6.0",
         "phpmailer/phpmailer": "^6.1"
     }
