--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "php": ">=7.1.3",
+        "ext-gd":"*",
+        "ext-memcached": "*",
         "swiftmailer/swiftmailer": "^6.0",
         "phpmailer/phpmailer": "^6.1"
     }
