--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
+ErrorDocument 404 /404.html
+
+Options +MultiViews
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^/]+)/$ $1.php
@@ -6,5 +9,3 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} !(\.[a-zA-Z0-9]{1,5}|/)$
 RewriteRule (.*)$ /$1/ [R=301,L]
-
-ErrorDocument 404 /404
